Update _config.yml to enhance traffic monitoring and system stability

--- a/_config.yml
+++ b/_config.yml
@@ -68,15 +68,16 @@ content:
         caption: 2014.05 ~ 현재
         description: | # this will include new lines to allow paragraphs
           **네이버 쇼핑**ㆍ[*https://shopping.naver.com*](https://shopping.naver.com)<br>
-          - **데이터 수집 및 상품 매칭 프로세스 개선 및 운영**(Kafka, Batch 활용)<br>
-          ㆍ 대규모 상품 데이터를 실시간으로 처리 및 매칭하는 데이터 파이프라인 최적화<br>
-          ㆍ 데이터 적재 및 변환 성능 개선으로 배치 처리 시간 30% 단축<br>
-          - **카오스 엔지니어링 도입(Toxiproxy)으로 신규 서비스(네이버플러스스토어) 안정성 및 고가용성 확보**<br>
-          ㆍ 장애 상황을 인위적으로 재현하여 네트워크 지연, DB 장애 등 다양한 시나리오 검증<br>
-          ㆍ 병목 구간 프로파일링 및 최적화를 통해 서비스 출시간 안정성 강화<br>
-          - **성능 테스트를 기반으로 인스턴스 Pod 수 및 HPA 기준 확립**<br>
-          ㆍ 트래픽 패턴 분석을 통해 최적의 Horizontal Pod Autoscaling(HPA) 임계값 설정<br>
-          ㆍ 부하 테스트 및 리소스 최적화를 통해 운영 비용 절감 및 성능 향상<br>
+          - **트래픽 모니터링 및 대응 시스템 구축<br>
+          ㆍ Nginx VTS 모듈 활용 실시간 트래픽 감지 및 임계치(예: QPS 1,000 이상) 초과 시 알림 발송<br>
+          ㆍ 엑세스 로그를 활용한 ELK 스택 기반 트래픽 대시보드 구성 및 분석 시간 약 5분 → 1분 이내로 단축(최대 80% 감소), 실시간 대응 가능<br>
+          ㆍ 애플리케이션 메트릭 수집(Prometheus + Grafana) – 응답 시간, DB 쿼리 성능, 스레드 풀 사용량 등을 모니터링하여 트래픽 급증 시 애플리케이션 병목 원인 분석 가능<br>
+          ㆍ Nginx Rate Limit 설정을 통한 DDoS 및 비정상 트래픽 차단으로 서버 부하를 100%에서 60%로 감소, 안정적인 트래픽 처리 환경 확보<br>
+          - **신규 서비스 출시간 안정성 및 고가용성 확보**<br>
+          ㆍ Fallback Cache 도입 – 기존 Remote Cache(Redis) 만료 시 빈 응답이 반환되는 문제를 개선하여 데이터 조회 성공률 99.9% 유지<br>
+          ㆍ 최근 정상 응답 데이터를 장기간 보관하고 주기적으로 갱신하는 Fallback Cache 설계를 적용해, Remote Cache 만료 및 외부 리소스 장애 발생 시에도 안정적인 데이터 제공 보장<br>
+          ㆍ 카오스 엔지니어링(Toxiproxy) 도입 – 네트워크 장애를 인위적으로 재현하여 재시도, 타임아웃, 연결 복구 등 장애 대응 로직 검증<br>
+          ㆍ 장애 테스트를 통해 Fallback Cache 결함 발견(복구 전환 실패) 및 최적화하여, 서비스 출시 후 6개월간 무장애 운영 달성<br>
           
           **쇼핑라이브**ㆍ[*https://shoppinglive.naver.com*](https://shoppinglive.naver.com/)<br>
           - **EDA 기반 고가용성 데이터 가공 파이프라인 구축**으로 유저 행동 기반 **개인화 추천 및 실시간 랭킹/피드 서비스 구현**<br>
@@ -85,9 +86,6 @@ content:
           - **팀 내 DevOps 활동 강화(CI/CD, GitHub Actions, 메신저 봇 자동화)로 업무 생산성 및 효율성 개선**<br>
           ㆍ Jenkins, GitHub Actions를 활용한 배포 자동화로 코드 안정성과 운영 효율성 향상<br>
           ㆍ 사내 메신저 봇을 활용한 빌드/배포 알림 및 장애 탐지 자동화<br>
-          - **Kubernetes 기반 신규 모듈 인프라 구축**으로 서비스 확장성과 운영 안정성 확보<br>
-          ㆍ Helm Chart를 이용한 배포 자동화 및 리소스 관리 최적화<br>
-          ㆍ Horizontal Pod Autoscaling(HPA) 적용으로 트래픽 변화에 따른 유연한 확장 지원<br>
 
           **V Live**ㆍ[*http://www.vlive.tv*](http://www.vlive.tv/)<br>
           - 1,000만 사용자 대상 방송 알림 속도 개선(11분 → 30초)으로 푸시 알림 시스템 성능 95% 향상 ([*관련 블로깅*](https://taetaetae.github.io/2019/01/02/faster-parallel-processes/))<br>
