--- a/_config.yml
+++ b/_config.yml
@@ -74,9 +74,8 @@ content:
           ㆍ 메트릭 수집(Prometheus + Grafana) 및 대시보드 구성 – 응답 시간·DB 쿼리 성능 분석으로 병목 원인 파악<br>
           ㆍ Nginx Rate Limit 설정을 통한 비정상 트래픽 차단으로 서버 부하를 100%에서 60%로 감소, 안정적인 트래픽 처리 환경 확보<br>
           - **신규 서비스 출시간 안정성 및 고가용성 확보**<br>
-          ㆍ Fallback Cache 도입으로 Remote Cache(Redis) 만료 시 외부 응답 지연으로 인한 빈 응답 문제 해결, 조회 성공률 99.9% 유지<br>
-          ㆍ 최근 정상 응답 데이터를 장기간 보관하고 주기적으로 갱신하는 Fallback Cache 설계를 적용해, Remote Cache 만료 및 외부 리소스 장애 발생 시에도 안정적인 데이터 제공 보장<br>
-          ㆍ 카오스 엔지니어링(Toxiproxy)으로 네트워크 장애 재현, 재시도·타임아웃·연결 복구 등 장애 대응 로직 검증<br>
+          ㆍ Fallback Cache 도입으로 Remote Cache(Redis) 만료 시 외부 응답 지연으로 인한 빈 응답 문제 해소<br>
+          ㆍ 카오스 엔지니어링(Toxiproxy) 도입으로 네트워크 장애 재현, 재시도·타임아웃·연결 복구 등 Fallback Cache 로직 검증<br>
           ㆍ 장애 테스트를 통해 Fallback Cache 결함 발견(복구 전환 실패) 및 최적화하여, 서비스 출시 후 6개월간 무장애 운영 달성<br>
           - **EDA 기반 고가용성 데이터 가공 파이프라인 구축**으로 유저 행동 기반 **개인화 추천 및 실시간 랭킹/피드 서비스 구현**<br>
           ㆍ Kafka 기반 실시간 스트리밍 데이터 처리로 사용자 이벤트를 분석 및 추천 시스템 연계<br>
