--- a/_config.yml
+++ b/_config.yml
@@ -77,35 +77,33 @@ content:
           ㆍ Fallback Cache 도입으로 Remote Cache(Redis) 만료 시 외부 응답 지연으로 인한 빈 응답 문제 해소<br>
           ㆍ 카오스 엔지니어링(Toxiproxy) 도입으로 네트워크 장애 재현, 재시도·타임아웃·연결 복구 등 Fallback Cache 로직 검증<br>
           ㆍ 장애 테스트를 통해 Fallback Cache 결함 발견(복구 전환 실패) 및 최적화하여, 서비스 출시 후 6개월간 무장애 운영 달성<br>
-          - **EDA 기반 고가용성 데이터 가공 파이프라인 구축**으로 유저 행동 기반 **개인화 추천 및 실시간 랭킹/피드 서비스 구현**<br>
+          - **EDA 기반 고가용성 데이터 가공 파이프라인 구축**<br>
+          ㆍ 유저 행동 기반 개인화 추천 및 실시간 랭킹/피드 서비스 구현<br>
           ㆍ Kafka 기반 실시간 스트리밍 데이터 처리로 사용자 이벤트를 분석 및 추천 시스템 연계<br>
           ㆍ Redis를 활용하여 준 실시간 랭킹 계산 및 피드 노출 최적화<br>
 
           **V Live**ㆍ[*http://www.vlive.tv*](http://www.vlive.tv/)<br>
           - 1,000만 사용자 대상 방송 알림 속도 개선(11분 → 30초)으로 푸시 알림 시스템 성능 95% 향상 ([*관련 블로깅*](https://taetaetae.github.io/2019/01/02/faster-parallel-processes/))<br>
           ㆍ 기존 순차 처리 방식에서 **병렬 처리 및 메시지 큐(RabbitMQ) 활용**을 통해 대량 트래픽 처리 성능 개선<br>
-          ㆍ Redis 키 파티셔닝을 통해 알림 전송 속도 최적화 및 네트워크 부하 감소br>
+          ㆍ Redis 키 파티셔닝을 통해 알림 전송 속도 최적화 및 네트워크 부하 감소<br>
           - **서비스 전면 개편: Monolithic → MSA 구조 전환** 으로 확장성 및 장애 대응력 강화<br>
-          ㆍ **Event Sourcing, Circuit Breaker, 모듈 분리**를 적용하여 마이크로서비스 간 결합도를 낮추고 장애 격리 가능하도록 설계<br>
+          ㆍ **EDA, Circuit Breaker, 모듈 분리**를 적용하여 마이크로서비스 간 결합도를 낮추고 장애 격리 가능하도록 설계<br>
           ㆍ Kubernetes 기반 컨테이너 오케스트레이션 도입으로 배포 유연성 확보<br>
           - **CI/CD 자동화 및 코드 품질 개선**을 위한 정적 분석 도구(SonarQube) 및 온라인 코드 리뷰 도입 ([*관련 블로깅*](https://taetaetae.github.io/2018/02/08/jenkins-sonar-github-integration/))<br>
           ㆍ Jenkins, GitHub Actions을 활용한 배포 자동화로 코드 안정성 및 개발 생산성 향상<br>
           - **Batch 무중단 배포 적용**을 통해 서비스 연속성 유지 및 장애 최소화 ([*관련 블로깅*](https://taetaetae.github.io/2019/10/13/batch-nondisruptive-deploy/))<br>
 
           **네이버페이 카드 직가맹 시스템 (Payment Gateway)**<br>
-          - **프로젝트 초기 환경 셋팅** (빌드/배포 파이프라인 구축, CI/CD 설계, 서버 및 인프라 구성)<br>
-          - **Ansible을 활용한 서버 환경설정 자동화**로 운영 효율성 및 배포 안정성 향상<br>
-          - **Elastic Stack 기반 비즈니스 통합 모니터링 시스템 구축**으로 서비스 장애 감지 및 이상 탐지 자동화 ([*관련 블로깅*](https://d2.naver.com/helloworld/3585246))<br>
-          - **거래비 하락 모니터링 시스템 구축**을 통해 비정상 거래 패턴 자동 감지 및 대응 시스템 마련 ([*관련 블로깅*](https://taetaetae.github.io/2018/05/31/anomaly-detection/))<br>
-          - **트랜잭션 추적 및 성능 모니터링**을 위한 분산 트레이싱 도입으로 결제 시스템 안정성 강화<br>
-    
+          - 프로젝트 초기 환경 셋팅 (빌드/배포 파이프라인 구축, CI/CD 설계, 서버 및 인프라 구성)<br>
+          - Elastic Stack 기반 비즈니스 통합 모니터링 시스템 구축으로 서비스 장애 감지 및 이상 탐지 자동화 ([*관련 블로깅*](https://d2.naver.com/helloworld/3585246))<br>
+          - 거래비 하락 모니터링 시스템 구축을 통해 비정상 거래 패턴 자동 감지 및 대응 시스템 마련 ([*관련 블로깅*](https://taetaetae.github.io/2018/05/31/anomaly-detection/))<br>
+          - 트랜잭션 추적 및 성능 모니터링을 위한 분산 트레이싱 도입으로 결제 시스템 안정성 강화<br>
+          
           **네이버 날씨**ㆍ[*https://weather.naver.com*](https://weather.naver.com/)<br>
-          - **모바일 서비스 개편과 함께 백엔드 아키텍쳐 개편으로** API 구조 최적화 및 응답 속도 15% 개선<br>
-          - **CP사 수신 데이터 모니터링 툴 개발**로 데이터 정합성 검증 및 장애 감지 자동화<br>
-          - **Crontab 기반 데이터 수집을 Spring Batch 및 Jenkins로 전환**하여 데이터 흐름 시각화 및 운영 자동화<br>
-          - **날씨 데이터 캐싱 전략 개선**으로 트래픽 급증 시 부하 분산 및 API 안정성 향상<br>
-          - **데이터 파이프라인 로깅 체계 구축**으로 이상 데이터 탐지 및 처리 지연 문제 개선<br>
-          - 지도 기반 날씨 서비스 프로토타이핑 → 향후 서비스에 적용<br>
+          - CP사 수신 데이터 모니터링 툴 개발로 데이터 정합성 검증 및 장애 감지 자동화<br>
+          - Crontab 기반 데이터 수집을 Spring Batch 및 Jenkins로 전환하여 데이터 흐름 시각화 및 운영 자동화<br>
+          - 데이터 파이프라인 로깅 체계 구축으로 이상 데이터 탐지 및 처리 지연 문제 개선<br>
+          - 지도 기반 날씨 서비스 아이데이션 및 프로토타이핑 → 향후 서비스에 적용<br>
   
       - layout: top-left
         title: NHN Technology Services
