--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ content:
         sub_title: Software Engineer
         caption: 2014.05 ~ 현재
         description: | # this will include new lines to allow paragraphs
-          **네이버 쇼핑**ㆍ[*https://shopping.naver.com*](https://shopping.naver.com)<br>
+          **네이버 쇼핑**ㆍ[*https://shopping.naver.com*](https://shopping.naver.com) / (2022.02~현재)<br>
           - **트래픽 모니터링 및 대응 시스템 구축**<br>
           ㆍ Nginx VTS 모듈 활용 실시간 트래픽 감지 및 임계치(예: QPS 1,000 이상) 초과 시 알림 발송<br>
           ㆍ 엑세스 로그를 활용한 ELK 스택 기반 트래픽 대시보드 구성 및 분석 시간 약 5분 → 1분 이내로 단축(최대 80% 감소)<br>
@@ -82,7 +82,7 @@ content:
           ㆍ Kafka 기반 실시간 스트리밍 데이터 처리로 사용자 이벤트를 분석 및 추천 시스템 연계<br>
           ㆍ Redis를 활용하여 준 실시간 랭킹 계산 및 피드 노출 최적화<br>
 
-          **V Live**ㆍ[*http://www.vlive.tv*](http://www.vlive.tv/)<br>
+          **V Live**ㆍ[*http://www.vlive.tv*](http://www.vlive.tv/) / (2018.08~2022.02)<br>
           - 1,000만 사용자 대상 방송 알림 속도 개선(11분 → 30초)으로 푸시 알림 시스템 성능 95% 향상 ([*관련 블로깅*](https://taetaetae.github.io/2019/01/02/faster-parallel-processes/))<br>
           ㆍ 기존 순차 처리 방식에서 **병렬 처리 및 메시지 큐(RabbitMQ) 활용**을 통해 대량 트래픽 처리 성능 개선<br>
           ㆍ Redis 키 파티셔닝을 통해 알림 전송 속도 최적화 및 네트워크 부하 감소<br>
@@ -93,13 +93,13 @@ content:
           ㆍ Jenkins, GitHub Actions을 활용한 배포 자동화로 코드 안정성 및 개발 생산성 향상<br>
           - **Batch 무중단 배포 적용**을 통해 서비스 연속성 유지 및 장애 최소화 ([*관련 블로깅*](https://taetaetae.github.io/2019/10/13/batch-nondisruptive-deploy/))<br>
 
-          **네이버페이 카드 직가맹 시스템 (Payment Gateway)**<br>
+          **네이버페이 카드 직가맹 시스템 (Payment Gateway) / (2016.04~2018.08)**<br>
           - 프로젝트 초기 환경 셋팅 (빌드/배포 파이프라인 구축, CI/CD 설계, 서버 및 인프라 구성)<br>
           - Elastic Stack 기반 비즈니스 통합 모니터링 시스템 구축으로 서비스 장애 감지 및 이상 탐지 자동화 ([*관련 블로깅*](https://d2.naver.com/helloworld/3585246))<br>
           - 거래비 하락 모니터링 시스템 구축을 통해 비정상 거래 패턴 자동 감지 및 대응 시스템 마련 ([*관련 블로깅*](https://taetaetae.github.io/2018/05/31/anomaly-detection/))<br>
           - 트랜잭션 추적 및 성능 모니터링을 위한 분산 트레이싱 도입으로 결제 시스템 안정성 강화<br>
           
-          **네이버 날씨**ㆍ[*https://weather.naver.com*](https://weather.naver.com/)<br>
+          **네이버 날씨**ㆍ[*https://weather.naver.com*](https://weather.naver.com/) / (2014.05~2016.04)<br>
           - CP사 수신 데이터 모니터링 툴 개발로 데이터 정합성 검증 및 장애 감지 자동화<br>
           - Crontab 기반 데이터 수집을 Spring Batch 및 Jenkins로 전환하여 데이터 흐름 시각화 및 운영 자동화<br>
           - 데이터 파이프라인 로깅 체계 구축으로 이상 데이터 탐지 및 처리 지연 문제 개선<br>
@@ -110,10 +110,10 @@ content:
         sub_title: Software Engineer
         caption: 2013.05 ~ 2014.05
         description: | # this will include new lines to allow paragraphs
-          **네이버 게임ㆍ[*https://game.naver.com*](https://game.naver.com/)**<br>
-          - **네이버 아이디 기반 게임 채널링 서비스** 운영 및 게임사별 연동 최적화
-          - NHN Entertainment → NHN 으로 서비스 이관하는 과정에서 **DB 마이그레이션 및 서버 이전**을 안정적으로 수행
-          - **불필요한 초기 로딩을 제거하고 지연 로딩을 적용하여** 서비스 메인 페이지 성능 개선(2.1초 → 1.7초), 로딩 속도 19% 단축
+          **네이버 게임**ㆍ[*https://game.naver.com*](https://game.naver.com/)<br>
+          - 네이버 아이디 기반 게임 채널링 서비스 운영 및 게임사별 연동 최적화
+          - NHN Entertainment → NHN 으로 서비스 이관하는 과정에서 DB 마이그레이션 및 서버 이전을 안정적으로 수행
+          - 불필요한 초기 로딩을 제거하고 지연 로딩을 적용하여 서비스 메인 페이지 성능 개선(2.1초 → 1.7초), 로딩 속도 19% 단축
           
       - layout: top-left
         title: 대한민국 육군 장교 (ROTC)
@@ -175,15 +175,17 @@ content:
   - title: Skill.
     layout: text # Type of content section (list/text)
     content: |
-      - Language : Java, Kotlin, Python
-      - Framework : Spring (Boot, Batch, Core), Flask
+      - Language : Java, Kotlin
+      - Framework : Spring (Boot, Batch, Core)
       - ORM : Mybatis, Spring Data JDBC
       - Database : MySql, MongoDB, Redis, Elasticsearch
+      - Message Queue : Kafka
       - Build automation tool : Maven, Gradle
-      - Server : Apache, Nginx, Tomcat
+      - Web Server : Apache, Nginx, Tomcat
       - DevOps : CI/CD, Jenkins, Ansible, Github Actions
-      - Linux CentOS, k8s
+      - Container : Docker, Kubernetes
       - Pinpoint, nGrinder
+      - Monitoring : ELK, Prometheus, Grafana
 
 # Footer
 footer_show_references: false
