--- a/_config.yml
+++ b/_config.yml
@@ -55,8 +55,8 @@ about_title: About <mark>taetaetae</mark>
 about_profile_image: images/profile.png
 about_content: | # this will include new lines to allow paragraphs
   12년 차 백엔드 개발자로서, 1,000만 명 이상의 회원을 관리하고 대용량 데이터를 처리하며, 국내 및 글로벌 서비스를 포함한 대규모 트래픽을 처리하는 웹 서비스 운영과 개발을 경험했습니다. 동시에 읽기 쉽고 유지보수 가능한 코드를 작성하고, 정리와 꼼꼼함을 바탕으로 복잡한 시스템을 구조화하여 코드의 일관성, 성능 최적화, 기술 부채 해소를 통해 개발 과정에서 발생할 수 있는 문제를 사전에 방지하고 해결하는 데 기여하고 있습니다.<br>
-  개인의 성장뿐만 아니라 **팀 전체가 함께 성장하는 문화**를 만들어가는 데 관심이 많으며, **코드 리뷰, DevOps 개선, 지식 공유** 등을 통해 개발 생산성을 높이고 있습니다.<br>
-  현재는 조직 내 시니어 개발자로써 **트러블 슈팅, 성능 개선, 고성능 API 설계** 에 집중하며, **비즈니스 성장에 기여하는 개발자**로서 지속적으로 발전하고자 합니다.
+  개인의 성장뿐만 아니라 팀 전체가 함께 성장하는 문화를 만들어가는 데 관심이 많으며, 코드 리뷰, DevOps 개선, 지식 공유 등을 통해 개발 생산성을 높이고 있습니다.<br>
+  현재는 조직 내 시니어 개발자로써 트러블 슈팅, 성능 개선, 고성능 API 설계에 집중하며, 비즈니스 성장에 기여하는 개발자로서 지속적으로 발전하고자 합니다.
 
 content:
   - title: Work Experience. # Title for the section
