Refine _config.yml for improved clarity in traffic monitoring and disaster recovery strategies

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,8 @@ content:
           ㆍ Kafka 기반 실시간 스트리밍 데이터 처리로 사용자 이벤트를 분석 및 추천 시스템 연계<br>
           ㆍ 기존 배치 기반 랭킹 시스템(1시간 단위) → 실시간 반영 (피드 최신성 개선)<br>
           ㆍ Redis를 활용하여 준 실시간 랭킹 계산 및 피드 노출 최적화<br>
-
+          - 서비스 주요 API 개발 및 데이터 파이프라인 운영
+          
           **V Live**ㆍ[*http://www.vlive.tv*](http://www.vlive.tv/)ㆍ<small>(2018.08~2022.02)</small><br>
           - 1,000만 사용자 대상 방송 알림 속도 개선(11분 → 30초)으로 푸시 알림 시스템 성능 95% 향상 ([*관련 블로깅*](https://taetaetae.github.io/2019/01/02/faster-parallel-processes/))<br>
           ㆍ 기존 프로세스의 문제점 도출, 플래닝 및 설계, 구현 및 단계적 배포까지 전 과정 참여<br>
