--- a/_config.yml
+++ b/_config.yml
@@ -72,14 +72,14 @@ content:
           - 대규모 트래픽 처리 및 장애 대응을 위한 실시간 트래픽 모니터링 시스템 설계 및 구축<br>
           ㆍ 기존 장애 대응 방식(로그 분석 기반)이 비효율적이었으며, 평균 대응 시간이 5분 이상 소요됨<br>
           ㆍ Nginx VTS 모듈 및 Prometheus를 활용한 메트릭 기반 실시간 트래픽 모니터링 체계 구축(dry_run 검증 후 적용)<br>
-          ㆍ Nginx Rate Limit 설정을 통한 비정상 트래픽 차단으로 서버 부하를 100%에서 60%로 감소, 안정적인 트래픽 처리 환경 확보<br>
+          ㆍ Nginx Rate Limit 설정으로 비정상 트래픽 차단 및 안정적인 트래픽 처리 환경 확보<br>
           ㆍ 메트릭 수집(Prometheus + Grafana) 및 대시보드 구성 – 응답 시간·DB 쿼리 성능 분석으로 병목 원인 파악<br>
           ㆍ 엑세스 로그를 활용한 ELK 스택 기반 트래픽 대시보드 구성 및 분석 시간 단축<br>
           - 신규 서비스 안정성을 위한 장애 복구 전략 및 Chaos Engineering 도입<br>
           ㆍ 서비스 출시 전 장애 복구 시나리오 수립 및 재현 테스트 수행<br>
           ㆍ Fallback Cache 도입으로 Remote Cache(Redis) 만료 시 외부 응답 지연으로 인한 빈 응답 문제 해소<br>
-          ㆍ 카오스 엔지니어링(Toxiproxy) 도입으로 응답지연 장애 재현, 재시도·타임아웃·연결 복구 등 Fallback Cache 로직 검증<br>
-          ㆍ 장애 테스트를 통해 Fallback Cache 결함 발견(복구 전환 실패) 및 최적화하여, 서비스 출시 후 6개월간 무장애 운영 달성<br>
+          ㆍ 카오스 엔지니어링(Toxiproxy) 도입으로 응답지연 장애 재현, 재시도·연결 복구 등 Fallback Cache 로직 검증<br>
+          ㆍ 장애 테스트를 통해 Fallback Cache 결함 발견(복구 전환 실패) 및 최적화, 서비스 출시 후 6개월간 무장애 운영 달성<br>
           - 대규모 실시간 유저 이벤트 처리를 위한 고가용성 데이터 파이프라인 구축<br>
           ㆍ 유저 행동 기반 개인화 추천 및 실시간 랭킹/피드 서비스 구현<br>
           ㆍ Kafka 기반 실시간 스트리밍 데이터 처리로 사용자 이벤트를 분석 및 추천 시스템 연계<br>
