--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ content:
           ㆍ 서비스 출시 전 장애 복구 시나리오 수립 및 재현 테스트 수행<br>
           ㆍ Fallback Cache 도입으로 Remote Cache(Redis) 만료 시 외부 응답 지연으로 인한 빈 응답 문제 해소<br>
           ㆍ 카오스 엔지니어링(Toxiproxy) 도입으로 응답지연 장애 재현, 재시도·연결 복구 등 Fallback Cache 로직 검증<br>
-          ㆍ 장애 테스트를 통해 Fallback Cache 결함 발견(복구 전환 실패) 및 최적화, 서비스 출시 후 6개월간 무장애 운영 달성<br>
+          ㆍ 장애 테스트를 통해 Fallback Cache 결함 발견(복구 전환 실패) 및 최적화, 서비스 출시 후 6개월간 무장애 운영중<br>
           - 대규모 실시간 유저 이벤트 처리를 위한 고가용성 데이터 파이프라인 구축<br>
           ㆍ 유저 행동 기반 개인화 추천 및 실시간 랭킹/피드 서비스 구현<br>
           ㆍ Kafka 기반 실시간 스트리밍 데이터 처리로 사용자 이벤트를 분석 및 추천 시스템 연계<br>
