--- a/_config.yml
+++ b/_config.yml
@@ -73,11 +73,11 @@ content:
           ㆍ 기존 장애 대응 방식(로그 분석 기반)이 비효율적이었으며, 평균 대응 시간이 5분 이상 소요됨<br>
           ㆍ Nginx VTS 모듈 및 Prometheus를 활용한 메트릭 기반 실시간 트래픽 모니터링 체계 구축(dry_run 검증 후 적용)<br>
           ㆍ Nginx Rate Limit 설정으로 비정상 트래픽 차단 및 안정적인 트래픽 처리 환경 확보<br>
-          ㆍ 메트릭 수집(Prometheus + Grafana) 및 대시보드 구성 – 응답 시간·DB 쿼리 성능 분석으로 병목 원인 파악<br>
+          ㆍ 어플리케이션 메트릭 수집 및 Grafana 대시보드 구성 – 응답 시간·DB 쿼리 성능 분석으로 병목 원인 파악<br>
           ㆍ 엑세스 로그를 활용한 ELK 스택 기반 트래픽 대시보드 구성 및 분석 시간 단축<br>
           - 신규 서비스 안정성을 위한 장애 복구 전략 및 Chaos Engineering 도입<br>
           ㆍ 서비스 출시 전 장애 복구 시나리오 수립 및 재현 테스트 수행<br>
-          ㆍ Fallback Cache 도입으로 Remote Cache(Redis) 만료 시 외부 응답 지연으로 인한 빈 응답 문제 해소<br>
+          ㆍ 외부 응답 지연 발생으로 인한 빈 응답 문제 해소를 위해 Fallback Cache(Redis) 도입<br>
           ㆍ 카오스 엔지니어링(Toxiproxy) 도입으로 응답지연 장애 재현, 재시도·연결 복구 등 Fallback Cache 로직 검증<br>
           ㆍ 장애 테스트를 통해 Fallback Cache 결함 발견(복구 전환 실패) 및 최적화, 서비스 출시 후 6개월간 무장애 운영중<br>
           - 대규모 실시간 유저 이벤트 처리를 위한 고가용성 데이터 파이프라인 구축<br>
@@ -87,7 +87,7 @@ content:
           
           **V Live**ㆍ[*http://www.vlive.tv*](http://www.vlive.tv/)ㆍ<small>(2018.08~2022.02)</small><br>
           - 1,000만 사용자 대상 방송 알림 속도 개선(11분 → 30초)으로 푸시 알림 시스템 성능 95% 향상 ([*관련 블로깅*](https://taetaetae.github.io/2019/01/02/faster-parallel-processes/))<br>
-          ㆍ 기존 프로세스의 문제점 도출, 플래닝 및 설계, 구현 및 3단계에 걸친 단계적 배포까지 전 과정 참여<br>
+          ㆍ 기존 프로세스의 문제점 도출, 플래닝 및 설계, 구현 등 3단계에 걸친 단계적 배포까지 전 과정 참여<br>
           ㆍ 발송 대상 조회방식 변경하고 메시지 큐(RabbitMQ) 병렬처리 방식을 개선하여 속도 개선<br>
           ㆍ 중복 발송을 제어하기 위한 Redis 키 파티셔닝을 통해 Redis 부하 감소 및 프로세스 속도 증가<br>
           - 서비스 전면 개편: Monolithic → MSA 구조 전환 으로 확장성 및 장애 대응력 강화<br>
