--- a/_config.yml
+++ b/_config.yml
@@ -71,8 +71,8 @@ content:
           - 서비스 주요 API 개발 및 데이터 파이프라인 운영<br>
           - 대규모 트래픽 처리 및 장애 대응을 위한 실시간 트래픽 모니터링 시스템 설계 및 구축<br>
           ㆍ 기존 장애 대응 방식(로그 분석 기반)이 비효율적이었으며, 평균 대응 시간이 5분 이상 소요됨<br>
-          ㆍ Nginx VTS 모듈 및 Prometheus를 활용한 메트릭 기반 실시간 트래픽 모니터링 체계 구축(dry_run 검증 후 적용)<br>
-          ㆍ Nginx Rate Limit 설정으로 비정상 트래픽 차단 및 안정적인 트래픽 처리 환경 확보<br>
+          ㆍ Nginx VTS 모듈 및 Prometheus를 활용한 메트릭 기반 실시간 트래픽 모니터링 체계 구축<br>
+          ㆍ Nginx Rate Limit 설정으로 비정상 트래픽 차단 및 안정적인 트래픽 처리 환경 확보(dry_run 검증 후 적용)<br>
           ㆍ 어플리케이션 메트릭 수집 및 Grafana 대시보드 구성 – 응답 시간·DB 쿼리 성능 분석으로 병목 원인 파악<br>
           ㆍ 엑세스 로그를 활용한 ELK 스택 기반 트래픽 대시보드 구성 및 분석 시간 단축<br>
           - 신규 서비스 안정성을 위한 장애 복구 전략 및 Chaos Engineering 도입<br>
