--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ repository: taetaetae/resume
 # Content configuration version
 version: 2
 
-update_date: 2025.03.15
+update_date: 2025.04.16
 
 # Personal info
 name: 권태관
@@ -68,22 +68,42 @@ content:
         caption: 2014.05 ~ 현재
         description: | # this will include new lines to allow paragraphs
           **네이버 쇼핑**ㆍ[*https://shopping.naver.com*](https://shopping.naver.com)ㆍ<small>(2022.02~현재)</small><br>
-          - 서비스 주요 API 개발 및 데이터 파이프라인 운영<br>
-          - 대규모 트래픽 처리 및 장애 대응을 위한 실시간 트래픽 모니터링 시스템 설계 및 구축<br>
+          - 신규 서비스(퀵커머스) 상품 API 개발 및 개발 TF 내 레이어 아키텍쳐, 테스트 코드 등 주도적인 개발 컨벤션 정립<br>
+          ㆍ 무분별한 레이어간의 호출로 인한 모호한 책임/관심사로 유지보수가 어려워지는 문제 발생
+          ㆍ 레이어 아키텍쳐를 정립하여 레이어간의 책임을 명확히 하고, 테스트 코드 작성 가이드를 통해 레이어간의 의존성을 줄여 유지보수 용이성 확보<br>
+          ㆍ 피트니스 함수(archUnit) 적용 및 CI와 연동하여 검증 자동화<br>
+          ㆍ 상품 원본 수신팀 및 클라이언트, 기획/설계 부서와 적극적으로 협업하며 요구사항 및 일정에 문제 없이 개발 진행<br>
+          <div style="height: 0.5em;"></div>
+          
+          - 패션타운 서비스 운영간 대규모 트래픽 처리 및 장애 대응을 위한 실시간 트래픽 모니터링 시스템 설계 및 구축<br>
           ㆍ 기존 장애 대응 방식(로그 분석 기반)이 비효율적이었으며, 평균 대응 시간이 5분 이상 소요됨<br>
           ㆍ Nginx VTS 모듈 및 Prometheus를 활용한 메트릭 기반 실시간 트래픽 모니터링 체계 구축<br>
           ㆍ Nginx Rate Limit 설정으로 비정상 트래픽 차단 및 안정적인 트래픽 처리 환경 확보(dry_run 검증 후 적용)<br>
           ㆍ 어플리케이션 메트릭 수집 및 Grafana 대시보드 구성 – 응답 시간·DB 쿼리 성능 분석으로 병목 원인 파악<br>
           ㆍ 엑세스 로그를 활용한 ELK 스택 기반 트래픽 대시보드 구성 및 분석 시간 단축<br>
+          <div style="height: 0.5em;"></div>
+          
+          - 상품 표준화 개발<br>
+          ㆍ 하나의 상품에 여러 옵션이 있는 구조에서 각 옵션별로 상품이 나뉘는 1:N 구조의 '그룹상품' 서비스 적용<br>
+          ㆍ ElasticSearch의 Collapse Query를 활용하여 리스팅과 필터링, 페이징 처리 시점에서 동일한 그룹상품 제거<br>
+          ㆍ 정렬별 우선순위에 맞춰 그룹상품 내 대표 상품 노출 처리<br> 
+          ㆍ MongoDB와 ElasticSearch 간 상품 수신 데이터 파이프라인 설계 및 마이그레이션 작업을 주도<br>
+          ㆍ 부하 테스트를 통한 로직의 안정성 검증 및 쿼리 질의 등 개선 포인트 도출<br>
+          ㆍ 과제 리딩 역할을 수행하며, 내부 팀과 외부 부서 간 협업을 원활히 조율하여 누락 없이 과제를 성공적으로 마무리<br>
+          <div style="height: 0.5em;"></div>
+          
           - 신규 서비스 안정성을 위한 장애 복구 전략 및 Chaos Engineering 도입<br>
           ㆍ 서비스 출시 전 장애 복구 시나리오 수립 및 재현 테스트 수행<br>
           ㆍ 외부 응답 지연 발생으로 인한 빈 응답 문제 해소를 위해 Fallback Cache(Redis) 도입<br>
           ㆍ 카오스 엔지니어링(Toxiproxy) 도입으로 응답지연 장애 재현, 재시도·연결 복구 등 Fallback Cache 로직 검증<br>
-          ㆍ 장애 테스트를 통해 Fallback Cache 결함 발견(복구 전환 실패) 및 최적화, 서비스 출시 후 6개월간 무장애 운영중<br>
+          ㆍ 장애 테스트를 통해 Fallback Cache 결함 발견(복구 전환 실패) 및 최적화, 서비스 출시 후 6개월간 무장애 운영중<br
+          <div style="height: 0.5em;"></div>
+          
           - 대규모 실시간 유저 이벤트 처리를 위한 고가용성 데이터 파이프라인 구축<br>
-          ㆍ 유저 행동 기반 개인화 추천 및 실시간 랭킹/피드 서비스 구현<br>
+          ㆍ 유저 행동 기반 개인화 상품 추천 및 실시간 랭킹/피드 서비스 구현<br>
           ㆍ Kafka 기반 실시간 스트리밍 데이터 처리로 사용자 이벤트를 분석 및 추천 시스템 연계<br>
           ㆍ 기존 배치 기반 랭킹 시스템(1시간 단위) → Redis를 활용하여 준 실시간 랭킹 계산 (최신성 개선)<br>
+          <div style="height: 1em;"></div>
           
           **V Live**ㆍ[*http://www.vlive.tv*](http://www.vlive.tv/)ㆍ<small>(2018.08~2022.02)</small><br>
           - 1,000만 사용자 대상 방송 알림 속도 개선(11분 → 30초)으로 푸시 알림 시스템 성능 95% 향상 ([*관련 블로깅*](https://taetaetae.github.io/2019/01/02/faster-parallel-processes/))<br>
