--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ content:
         description: | # this will include new lines to allow paragraphs
           **네이버 쇼핑**ㆍ[*https://shopping.naver.com*](https://shopping.naver.com)ㆍ<small>(2022.02~현재)</small><br>
           - 신규 서비스(퀵커머스) 상품 API 개발 및 개발 TF 내 레이어 아키텍쳐, 테스트 코드 등 주도적인 개발 컨벤션 정립<br>
-          ㆍ 무분별한 레이어간의 호출로 인한 모호한 책임/관심사로 유지보수가 어려워지는 문제 발생
+          ㆍ 무분별한 레이어간의 호출로 인한 모호한 책임/관심사로 유지보수가 어려워지는 문제 발생<br>
           ㆍ 레이어 아키텍쳐를 정립하여 레이어간의 책임을 명확히 하고, 테스트 코드 작성 가이드를 통해 레이어간의 의존성을 줄여 유지보수 용이성 확보<br>
           ㆍ 피트니스 함수(archUnit) 적용 및 CI와 연동하여 검증 자동화<br>
           ㆍ 상품 원본 수신팀 및 클라이언트, 기획/설계 부서와 적극적으로 협업하며 요구사항 및 일정에 문제 없이 개발 진행<br>
@@ -78,7 +78,7 @@ content:
           - 패션타운 서비스 운영간 대규모 트래픽 처리 및 장애 대응을 위한 실시간 트래픽 모니터링 시스템 설계 및 구축<br>
           ㆍ 기존 장애 대응 방식(로그 분석 기반)이 비효율적이었으며, 평균 대응 시간이 5분 이상 소요됨<br>
           ㆍ Nginx VTS 모듈 및 Prometheus를 활용한 메트릭 기반 실시간 트래픽 모니터링 체계 구축<br>
-          ㆍ Nginx Rate Limit 설정으로 비정상 트래픽 차단 및 안정적인 트래픽 처리 환경 확보(dry_run 검증 후 적용)<br>
+          ㆍ Nginx Rate Limit 설정으로 비정상 트래픽 차단 및 안정적인 트래픽 처리 환경 확보(dry_run 검증 후 안정적인 적용)<br>
           ㆍ 어플리케이션 메트릭 수집 및 Grafana 대시보드 구성 – 응답 시간·DB 쿼리 성능 분석으로 병목 원인 파악<br>
           ㆍ 엑세스 로그를 활용한 ELK 스택 기반 트래픽 대시보드 구성 및 분석 시간 단축<br>
           <div style="height: 0.5em;"></div>
@@ -96,7 +96,7 @@ content:
           ㆍ 서비스 출시 전 장애 복구 시나리오 수립 및 재현 테스트 수행<br>
           ㆍ 외부 응답 지연 발생으로 인한 빈 응답 문제 해소를 위해 Fallback Cache(Redis) 도입<br>
           ㆍ 카오스 엔지니어링(Toxiproxy) 도입으로 응답지연 장애 재현, 재시도·연결 복구 등 Fallback Cache 로직 검증<br>
-          ㆍ 장애 테스트를 통해 Fallback Cache 결함 발견(복구 전환 실패) 및 최적화, 서비스 출시 후 6개월간 무장애 운영중<br
+          ㆍ 장애 테스트를 통해 Fallback Cache 결함 발견(복구 전환 실패) 및 최적화, 서비스 출시 후 6개월간 무장애 운영중<br>
           <div style="height: 0.5em;"></div>
           
           - 대규모 실시간 유저 이벤트 처리를 위한 고가용성 데이터 파이프라인 구축<br>
