--- a/_config.yml
+++ b/_config.yml
@@ -69,13 +69,13 @@ content:
         description: | # this will include new lines to allow paragraphs
           **네이버 쇼핑**ㆍ[*https://shopping.naver.com*](https://shopping.naver.com)ㆍ<small>(2022.02~현재)</small><br>
           - 신규 서비스(퀵커머스) 상품 API 개발 및 개발 TF 내 레이어 아키텍처/테스트 코드 컨벤션 정립<br>
-          ㆍ 개발 초기 문제: 신규 서비스 론칭 시 무분별한 레이어 간 호출로 인해 모듈 책임이 모호해지고, 테스트 코드 부재로 인한 잦은 리그레션 이슈 발생<br>
+          ㆍ 개발 초기 문제: 무분별한 레이어 간 호출로 인해 모듈 책임이 모호해지고, 테스트 코드 부재로 인한 잦은 리그레션 이슈 발생<br>
           ㆍ 레이어 아키텍처 정립: 각 레이어간 명확한 책임 분리를 제안하고 팀 내 개발 컨벤션 확립<br>
-            ㄴ ArchUnit 기반 피트니스 함수를 CI 파이프라인에 연동하여, 레이어 간 의존성 위반이 발생하면 빌드 실패로 자동 검증<br>
-          ㆍ 테스트 코드 작성 가이드: JUnit + Mockito 활용 예시와 best practice를 문서화, 팀원이 쉽게 적용할 수 있도록 템플릿 및 샘플 코드 제공<br>
+            ㆍ ArchUnit 기반 피트니스 함수를 CI 파이프라인에 연동, 레이어 간 의존성 위반 자동 검증<br>
+          ㆍ 테스트 코드 작성 가이드: unit test best practice를 문서화, 팀원이 쉽게 적용할 수 있도록 샘플 코드 제공<br>
+            ㆍ 코드 품질 향상 및 유지보수 용이성 확보<br>
           ㆍ 리더십 및 협업: 상품 원본 수신팀, 클라이언트(Front-End)팀, 기획/디자인 부서 등과 주기적인 스크럼 진행<br>
-            ㄴ 우선순위 설정과 일정 조율을 주도해 신규 기능을 마감일 내 안정적으로 배포<br>
-          ㆍ 코드 품질 향상 및 유지보수 용이성 확보<br>
+            ㆍ 우선순위 설정과 일정 조율을 주도해 신규 기능을 마감일 내 안정적으로 배포<br>
           <div style="height: 0.5em;"></div>
           
           - 패션타운 서비스 운영간 대규모 트래픽 처리 및 장애 대응을 위한 실시간 트래픽 모니터링 시스템 설계 및 구축<br>
