--- a/_config.yml
+++ b/_config.yml
@@ -78,34 +78,38 @@ content:
           ㅤㆍ우선순위 설정과 일정 조율을 주도해 신규 기능을 마감일 내 안정적으로 배포<br>
           <div style="height: 0.5em;"></div>
           
-          - 패션타운 서비스 운영간 대규모 트래픽 처리 및 장애 대응을 위한 실시간 트래픽 모니터링 시스템 설계 및 구축<br>
-          ㆍ 기존 장애 대응 방식(로그 분석 기반)이 비효율적이었으며, 평균 대응 시간이 5분 이상 소요됨<br>
-          ㆍ Nginx VTS 모듈 및 Prometheus를 활용한 메트릭 기반 실시간 트래픽 모니터링 체계 구축<br>
-          ㆍ Nginx Rate Limit 설정으로 비정상 트래픽 차단 및 안정적인 트래픽 처리 환경 확보(dry_run 검증 후 안정적인 적용)<br>
-          ㆍ 어플리케이션 메트릭 수집 및 Grafana 대시보드 구성 – 응답 시간·DB 쿼리 성능 분석으로 병목 원인 파악<br>
-          ㆍ 엑세스 로그를 활용한 ELK 스택 기반 트래픽 대시보드 구성 및 분석 시간 단축<br>
+          - 패션타운 서비스 운영 간 대규모 트래픽 처리 & 장애 대응을 위한 실시간 모니터링 시스템 구축<br>
+          ㆍ 기존 문제 : 장애 상황 발생 시 로그 분석 기반 수동 대응으로 평균 5분 이상의 장애 대응 지연<br>
+          ㆍ Nginx VTS 모듈 + Prometheus로 메트릭 수집 → Grafana 대시보드에서 실시간 트래픽 분석 체계 구축<br>
+          ㆍ Nginx Rate Limit 설정(dry_run 적용 후 안정적인 적용)으로 비정상 트래픽 차단 및 성능 저하 방지<br>
+          ㆍ Application 메트릭(응답 시간, DB 쿼리 속도 등)을 시각화하여 병목 구간 우선 개선<br>
+          ㆍ ELK 스택으로 접근 로그를 통합 분석하여 장애 원인 파악 및 대응 시간 단축(5분 → 1분 이내)<br>
           <div style="height: 0.5em;"></div>
           
-          - 상품 표준화 개발<br>
-          ㆍ 하나의 상품에 여러 옵션이 있는 구조에서 각 옵션별로 상품이 나뉘는 1:N 구조의 '그룹상품' 서비스 적용<br>
-          ㆍ ElasticSearch의 Collapse Query를 활용하여 리스팅과 필터링, 페이징 처리 시점에서 동일한 그룹상품 제거<br>
-          ㆍ 정렬별 우선순위에 맞춰 그룹상품 내 대표 상품 노출 처리<br> 
-          ㆍ MongoDB와 ElasticSearch 간 상품 수신 데이터 파이프라인 설계 및 마이그레이션 작업을 주도<br>
-          ㆍ 부하 테스트를 통한 로직의 안정성 검증 및 쿼리 질의 등 개선 포인트 도출<br>
-          ㆍ 과제 리딩 역할을 수행하며, 내부 팀과 외부 부서 간 협업을 원활히 조율하여 누락 없이 과제를 성공적으로 마무리<br>
+          - 상품 표준화(‘그룹상품’ 서비스) 개발 및 데이터 파이프라인 설계<br>
+          ㆍ 개발 배경: 동일 상품의 여러 옵션이 각각 다른 상품으로 등록되어 검색 정확도가 낮고, 사용자 혼란 유발<br>
+          ㆍ ElasticSearch의 collapse 쿼리를 활용해 그룹상품 단위로 중복 제거, 필터링·페이징 시 처리 성능 최적화<br>
+          ㆍ 정렬별 우선순위 정책에 맞춰 그룹 내 대표 상품 노출 로직 구현<br>
+          ㆍ MongoDB와 ElasticSearch 간 상품 수신 데이터 파이프라인 설계 및 마이그레이션 주도<br>
+          ㆍ 부하 테스트로 목표 TPS 기준 성능 검증 후 쿼리 질의 전략 개선<br>
+          ㆍ 상품 데이터 수신팀, QA 조직과 협의하여 누락 데이터·품질 이슈 발견 및 조치 플랜 마련<br>
+          ㆍ 과제 리딩 및 일정 관리, 리스크 식별을 주도하여 프로젝트를 기한 내 성공적 완료<br>
+          ㆍ 운영 인원(컨설턴트)의 상품 관리 작업 시간 단축<br>
           <div style="height: 0.5em;"></div>
           
-          - 신규 서비스 안정성을 위한 장애 복구 전략 및 Chaos Engineering 도입<br>
-          ㆍ 서비스 출시 전 장애 복구 시나리오 수립 및 재현 테스트 수행<br>
-          ㆍ 외부 응답 지연 발생으로 인한 빈 응답 문제 해소를 위해 Fallback Cache(Redis) 도입<br>
-          ㆍ 카오스 엔지니어링(Toxiproxy) 도입으로 응답지연 장애 재현, 재시도·연결 복구 등 Fallback Cache 로직 검증<br>
-          ㆍ 장애 테스트를 통해 Fallback Cache 결함 발견(복구 전환 실패) 및 최적화, 서비스 출시 후 6개월간 무장애 운영중<br>
+          - 신규 서비스 안정성을 위한 장애 복구 전략 수립 및 Chaos Engineering 도입<br>
+          ㆍ 목표: 서비스 출시 전 장애 복구 시나리오 마련 및 실제 환경에서의 실패 상황 시뮬레이션<br>
+          ㆍ 외부 응답 지연 시 Fallback Cache(Redis) 적용으로 빈 응답 문제 해소<br>
+          ㆍ Toxiproxy를 통한 응답 지연/네트워크 장애 재현, 재시도·연결 복구 로직 검증<br>
+          ㆍ 테스트 과정에서 Fallback Cache 전환 실패 결함 발견 → 로직 수정 후 성공률 100% 달성<br>
+          ㆍ 서비스 출시 후 6개월간 치명적 장애 0건 기록, SLA(99.99%) 준수<br>
           <div style="height: 0.5em;"></div>
           
           - 대규모 실시간 유저 이벤트 처리를 위한 고가용성 데이터 파이프라인 구축<br>
           ㆍ 유저 행동 기반 개인화 상품 추천 및 실시간 랭킹/피드 서비스 구현<br>
           ㆍ Kafka 기반 실시간 스트리밍 데이터 처리로 사용자 이벤트를 분석 및 추천 시스템 연계<br>
           ㆍ 기존 배치 기반 랭킹 시스템(1시간 단위) → Redis를 활용하여 준 실시간 랭킹 계산 (최신성 개선)<br>
+          ㆍ 서비스 론칭 후 Page View 10% 상승 기여<br>
           <div style="height: 1em;"></div>
           
           **V Live**ㆍ[*http://www.vlive.tv*](http://www.vlive.tv/)ㆍ<small>(2018.08~2022.02)</small><br>
