--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ content:
           **네이버 쇼핑**ㆍ[*https://shopping.naver.com*](https://shopping.naver.com)ㆍ<small>(2022.02~현재)</small><br>
           - 신규 서비스(퀵커머스) 상품 API 개발 및 개발 TF 내 레이어 아키텍처/테스트 코드 컨벤션 정립<br>
           ㆍ 개발 초기 문제 : 무분별한 레이어 간 호출로 인해 모듈 책임이 모호해지고, 테스트 코드 부재로 인한 잦은 리그레션 이슈 발생<br>
-          ㆍ 레이어 아키텍처 정립 : 각 레이어간 명확한 책임 분리를 제안하고 팀 내 개발 컨벤션 확립<br>
+          ㆍ 레이어 아키텍처 정립 : 각 레이어간 명확한 책임 분리를 리팩토링 및 제안하고 팀 내 개발 컨벤션 확립<br>
           ㅤㆍArchUnit 기반 피트니스 함수를 CI 파이프라인에 연동, 레이어 간 의존성 위반 자동 검증<br>
           ㆍ 테스트 코드 작성 가이드 : unit test best practice를 문서화, 팀원이 쉽게 적용할 수 있도록 샘플 코드 제공<br>
           ㅤㆍ코드 품질 향상 및 유지보수 용이성 확보<br>
