--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ content:
         description: | # this will include new lines to allow paragraphs
           **네이버 쇼핑**ㆍ[*https://shopping.naver.com*](https://shopping.naver.com)ㆍ<small>(2022.02~현재)</small><br>
           - 신규 서비스(퀵커머스) 상품 API 개발 및 개발 TF 내 레이어 아키텍처/테스트 코드 컨벤션 정립<br>
-          ㆍ 개발 초기 문제 : 무분별한 레이어 간 호출로 인해 모듈 책임이 모호해지고, 테스트 코드 부재로 인한 잦은 리그레션 이슈 발생<br>
+          ㆍ 무분별한 레이어 간 호출로 인해 모듈 책임이 모호해지고, 테스트 코드 부재로 인한 잦은 리그레션 처리 필요<br>
           ㆍ 레이어 아키텍처 정립 : 각 레이어간 명확한 책임 분리를 리팩토링 및 제안하고 팀 내 개발 컨벤션 확립<br>
           ㅤㆍArchUnit 기반 피트니스 함수를 CI 파이프라인에 연동, 레이어 간 의존성 위반 자동 검증<br>
           ㆍ 테스트 코드 작성 가이드 : unit test best practice를 문서화, 팀원이 쉽게 적용할 수 있도록 샘플 코드 제공<br>
@@ -79,7 +79,7 @@ content:
           <div style="height: 0.5em;"></div>
           
           - 패션타운 서비스 운영 간 대규모 트래픽 처리 & 장애 대응을 위한 실시간 모니터링 시스템 구축<br>
-          ㆍ 기존 문제 : 장애 상황 발생 시 로그 분석 기반 수동 대응으로 평균 5분 이상의 장애 대응 지연<br>
+          ㆍ 장애 상황 발생 시 로그 분석 기반 수동 대응으로 평균 5분 이상의 장애 대응이 지연됨<br>
           ㆍ Nginx VTS 모듈 + Prometheus로 메트릭 수집 → Grafana 대시보드에서 실시간 트래픽 분석 체계 구축<br>
           ㆍ Nginx Rate Limit 설정(dry_run 적용 후 안정적인 적용)으로 비정상 트래픽 차단 및 성능 저하 방지<br>
           ㆍ Application 메트릭(응답 시간, DB 쿼리 속도 등)을 시각화하여 병목 구간 우선 개선<br>
@@ -98,7 +98,7 @@ content:
           <div style="height: 0.5em;"></div>
           
           - 신규 서비스 안정성을 위한 장애 복구 전략 수립 및 Chaos Engineering 도입<br>
-          ㆍ 목표: 서비스 출시 전 장애 복구 시나리오 마련 및 실제 환경에서의 실패 상황 시뮬레이션<br>
+          ㆍ 서비스 출시 전 장애 복구 시나리오 마련 및 실제 환경에서의 실패 상황 시뮬레이션 목표<br>
           ㆍ 외부 응답 지연 시 Fallback Cache(Redis) 적용으로 빈 응답 문제 해소<br>
           ㆍ Toxiproxy를 통한 응답 지연/네트워크 장애 재현, 재시도·연결 복구 로직 검증<br>
           ㆍ 테스트 과정에서 Fallback Cache 전환 실패 결함 발견 → 로직 수정 후 성공률 100% 달성<br>
