--- a/_config.yml
+++ b/_config.yml
@@ -69,54 +69,66 @@ content:
         description: | # this will include new lines to allow paragraphs
           **네이버 쇼핑**ㆍ[*https://shopping.naver.com*](https://shopping.naver.com)ㆍ<small>(2022.02~현재)</small><br>
           - 신규 서비스(퀵커머스) 상품 API 개발 및 개발 TF 내 레이어 아키텍처/테스트 코드 컨벤션 정립<br>
-          ㆍ 무분별한 레이어 간 호출로 인해 모듈 책임이 모호해지고, 테스트 코드 부재로 인한 잦은 리그레션 처리 필요<br>
-          ㆍ 레이어 아키텍처 정립 : 각 레이어간 명확한 책임 분리를 리팩토링 및 제안하고 팀 내 개발 컨벤션 확립<br>
+          ㆍ 배경 : 무분별한 레이어 간 호출로 인해 모듈 책임이 모호해지고, 테스트 코드 부재로 인한 잦은 리그레션 처리 필요<br>
+          ㆍ 진행<br>
+          ㅤㆍ레이어 아키텍처 정립 : 각 레이어간 명확한 책임 분리를 리팩토링 및 제안하고 팀 내 개발 컨벤션 확립<br>
           ㅤㆍArchUnit 기반 피트니스 함수를 CI 파이프라인에 연동, 레이어 간 의존성 위반 자동 검증<br>
-          ㆍ 테스트 코드 작성 가이드 : unit test best practice를 문서화, 팀원이 쉽게 적용할 수 있도록 샘플 코드 제공<br>
-          ㅤㆍ코드 품질 향상 및 유지보수 용이성 확보<br>
-          ㆍ 리더십 및 협업 : 상품 원본 수신팀, 클라이언트(Front-End)팀, 기획/디자인 부서 등과 주기적인 스크럼 진행<br>
-          ㅤㆍ우선순위 설정과 일정 조율을 주도해 신규 기능을 마감일 내 안정적으로 배포<br>
+          ㅤㆍ테스트 코드 작성 가이드 : unit test best practice를 문서화, 팀원이 쉽게 적용할 수 있도록 샘플 코드 제공<br>
+          ㅤㅤㆍ코드 품질 향상 및 유지보수 용이성 확보<br>
+          ㅤㆍ리더십 및 협업 : 상품 원본 수신팀, 클라이언트(Front-End)팀, 기획/디자인 부서 등과 주기적인 스크럼 진행<br>
+          ㆍ 결과 : 우선순위 설정과 일정 조율을 주도해 신규 기능을 마감일 내 안정적으로 배포<br>
           <div style="height: 0.5em;"></div>
           
           - 패션타운 서비스 운영 간 대규모 트래픽 처리 & 장애 대응을 위한 실시간 모니터링 시스템 구축<br>
-          ㆍ 장애 상황 발생 시 로그 분석 기반 수동 대응으로 평균 5분 이상의 장애 대응이 지연됨<br>
-          ㆍ Nginx VTS 모듈 + Prometheus로 메트릭 수집 → Grafana 대시보드에서 실시간 트래픽 분석 체계 구축<br>
-          ㆍ Nginx Rate Limit 설정(dry_run 적용 후 안정적인 적용)으로 비정상 트래픽 차단 및 성능 저하 방지<br>
-          ㆍ Application 메트릭(응답 시간, DB 쿼리 속도 등)을 시각화하여 병목 구간 우선 개선<br>
-          ㆍ ELK 스택으로 접근 로그를 통합 분석하여 장애 원인 파악 및 대응 시간 단축(5분 → 1분 이내)<br>
+          ㆍ 배경 : 장애 상황 발생 시 로그 분석 기반 수동 대응으로 평균 5분 이상의 장애 대응이 지연됨<br>
+          ㆍ 진행<br>
+          ㅤㆍNginx VTS 모듈 + Prometheus로 메트릭 수집 → Grafana 대시보드에서 실시간 트래픽 분석 체계 구축<br>
+          ㅤㆍNginx Rate Limit 설정(dry_run 적용 후 안정적인 적용)으로 비정상 트래픽 차단 및 성능 저하 방지<br>
+          ㅤㆍApplication 메트릭(응답 시간, DB 쿼리 속도 등)을 시각화하여 병목 구간 우선 개선<br>
+          ㆍ 결과 : peak traffic 알림 수신 및 로그를 통합 분석하여 장애 원인 파악 및 대응 시간 단축(5분 → 1분 이내)<br>
           <div style="height: 0.5em;"></div>
           
           - 상품 표준화(‘그룹상품’ 서비스) 개발 및 데이터 파이프라인 설계<br>
-          ㆍ 개발 배경: 동일 상품의 여러 옵션이 각각 다른 상품으로 등록되어 검색 정확도가 낮고, 사용자 혼란 유발<br>
-          ㆍ ElasticSearch의 collapse 쿼리를 활용해 그룹상품 단위로 중복 제거, 필터링·페이징 시 처리 성능 최적화<br>
-          ㆍ 정렬별 우선순위 정책에 맞춰 그룹 내 대표 상품 노출 로직 구현<br>
-          ㆍ MongoDB와 ElasticSearch 간 상품 수신 데이터 파이프라인 설계 및 마이그레이션 주도<br>
-          ㆍ 부하 테스트로 목표 TPS 기준 성능 검증 후 쿼리 질의 전략 개선<br>
-          ㆍ 상품 데이터 수신팀, QA 조직과 협의하여 누락 데이터·품질 이슈 발견 및 조치 플랜 마련<br>
-          ㆍ 과제 리딩 및 일정 관리, 리스크 식별을 주도하여 프로젝트를 기한 내 성공적 완료<br>
-          ㆍ 운영 인원(컨설턴트)의 상품 관리 작업 시간 단축<br>
+          ㆍ 배경 : 동일 상품의 여러 옵션이 각각 다른 상품으로 등록되어 검색 정확도가 낮고, 사용자 혼란 유발<br>
+          ㆍ 진행<br>
+          ㅤㆍElasticSearch의 collapse 쿼리를 활용해 그룹상품 단위로 중복 제거, 필터링·페이징 시 처리 성능 최적화<br>
+          ㅤㆍ정렬별 우선순위 정책에 맞춰 그룹 내 대표 상품 노출 로직 구현<br>
+          ㅤㆍMongoDB와 ElasticSearch 간 상품 수신 데이터 파이프라인 설계 및 마이그레이션 주도<br>
+          ㅤㆍ부하 테스트로 목표 TPS 기준 성능 검증 후 쿼리 질의 전략 개선<br>
+          ㅤㆍ상품 데이터 수신팀, QA 조직과 협의하여 누락 데이터·품질 이슈 발견 및 조치 플랜 마련<br>
+          ㆍ 결과<br>
+          ㅤㆍ과제 리딩 및 일정 관리, 리스크 식별을 주도하여 프로젝트를 기한 내 완료<br>
+          ㅤㆍ운영 인원(컨설턴트)의 상품 관리 작업 시간 단축<br>
           <div style="height: 0.5em;"></div>
           
           - 신규 서비스 안정성을 위한 장애 복구 전략 수립 및 Chaos Engineering 도입<br>
-          ㆍ 서비스 출시 전 장애 복구 시나리오 마련 및 실제 환경에서의 실패 상황 시뮬레이션 목표<br>
-          ㆍ 외부 응답 지연 시 Fallback Cache(Redis) 적용으로 빈 응답 문제 해소<br>
-          ㆍ Toxiproxy를 통한 응답 지연/네트워크 장애 재현, 재시도·연결 복구 로직 검증<br>
-          ㆍ 테스트 과정에서 Fallback Cache 전환 실패 결함 발견 → 로직 수정 후 성공률 100% 달성<br>
-          ㆍ 서비스 출시 후 6개월간 치명적 장애 0건 기록, SLA(99.99%) 준수<br>
+          ㆍ 배경 : 서비스 출시 전 장애 복구 시나리오 마련 및 실제 환경에서의 실패 상황 시뮬레이션 목표<br>
+          ㆍ 진행<br>
+          ㅤㆍ외부 응답 지연 시 Fallback Cache(Redis) 적용으로 빈 응답 문제 해소<br>
+          ㅤㆍToxiproxy를 통한 응답 지연/네트워크 장애 재현, 재시도·연결 복구 로직 검증<br>
+          ㆍ 결과<br>
+          ㅤㆍ테스트 과정에서 Fallback Cache 전환 실패 결함 발견 → 로직 수정 후 성공률 100% 달성<br>
+          ㅤㆍ서비스 출시 후 6개월간 치명적 장애 0건 기록, SLA(99.99%) 준수<br>
           <div style="height: 0.5em;"></div>
           
           - 대규모 실시간 유저 이벤트 처리를 위한 고가용성 데이터 파이프라인 구축<br>
-          ㆍ 유저 행동 기반 개인화 상품 추천 및 실시간 랭킹/피드 서비스 구현<br>
-          ㆍ Kafka 기반 실시간 스트리밍 데이터 처리로 사용자 이벤트를 분석 및 추천 시스템 연계<br>
-          ㆍ 기존 배치 기반 랭킹 시스템(1시간 단위) → Redis를 활용하여 준 실시간 랭킹 계산 (최신성 개선)<br>
-          ㆍ 서비스 론칭 후 Page View 10% 상승 기여<br>
+          ㆍ 배경 : 유저 행동 기반 개인화 상품 추천 및 실시간 랭킹/피드 서비스 구현<br>
+          ㆍ 진행<br>
+          ㅤㆍKafka 기반 실시간 스트리밍 데이터 처리로 사용자 이벤트를 분석 및 추천 시스템 연계<br>
+          ㅤㆍ기존 배치 기반 랭킹 시스템(1시간 단위) → Redis를 활용하여 준 실시간 랭킹 계산 (최신성 개선)<br>
+          ㆍ 결과 : 서비스 론칭 후 Page View 10% 상승 기여<br>
           <div style="height: 1em;"></div>
           
           **V Live**ㆍ[*http://www.vlive.tv*](http://www.vlive.tv/)ㆍ<small>(2018.08~2022.02)</small><br>
-          - 1,000만 사용자 대상 방송 알림 속도 개선(11분 → 30초)으로 푸시 알림 시스템 성능 95% 향상 ([*관련 블로깅*](https://taetaetae.github.io/2019/01/02/faster-parallel-processes/))<br>
-          ㆍ 기존 프로세스의 문제점 도출, 플래닝 및 설계, 구현 등 3단계에 걸친 단계적 배포까지 전 과정 참여<br>
-          ㆍ 발송 대상 조회방식 변경하고 메시지 큐(RabbitMQ) 병렬처리 방식을 개선하여 속도 개선<br>
-          ㆍ 중복 발송을 제어하기 위한 Redis 키 파티셔닝을 통해 Redis 부하 감소 및 프로세스 속도 증가<br>
+          - 방송 알림 속도 개선 ([*관련 블로깅*](https://taetaetae.github.io/2019/01/02/faster-parallel-processes/))<br>
+          ㆍ 배경 : 느린 알림속도로 스타와 팬간의 소통 단절 및 방송 시청률 저하<br>
+          ㆍ 진행<br>
+          ㅤㆍ기존 프로세스의 문제점 도출, 플래닝 및 설계, 구현 등 3단계에 걸친 단계적 배포까지 전 과정 참여<br>
+          ㅤㆍ발송 대상 조회방식 변경하고 메시지 큐(RabbitMQ) 병렬처리 방식을 개선하여 속도 개선<br>
+          ㅤㆍ중복 발송을 제어하기 위한 Redis 키 파티셔닝을 통해 Redis 부하 감소 및 프로세스 속도 증가<br>
+          ㆍ 결과<br>
+          ㅤㆍ1,000만 사용자 대상 방송 알림 속도 개선(11분 → 30초)으로 푸시 알림 시스템 성능 95% 향상<br>
+          ㅤㆍ알림 기능을 활용한 비즈니스 모델 다각화 및 신규 기능(새소식) 출시<br>
           - 서비스 전면 개편: Monolithic → MSA 구조 전환 으로 확장성 및 장애 대응력 강화<br>
           ㆍ EDA 도입, Circuit Breaker, 모듈 분리를 적용하여 마이크로서비스 간 결합도를 낮추고 장애 격리 가능하도록 설계<br>
           ㆍ Kubernetes 기반 컨테이너 오케스트레이션 도입으로 배포 유연성 확보<br>
